--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,6 @@ nav {}
     height: auto;
     background-color: #76ccfd;
     text-align: center;
-    padding: 0 50px;
 }
 
 .title>p {
@@ -111,7 +110,7 @@ nav {}
 
 .about {
     background-color: #c6b0e7;
-    padding: 50px;
+    padding: 50px 0;
     width: 100%;
     margin: 0;
 }
@@ -147,6 +146,7 @@ nav {}
     background-color: #fff;
     padding: 50px 50px;
     align-items: center;
+    justify-content: center;
     border-radius: 50px;
     border: solid 1px #000;
     box-shadow: 5px 5px 0 2px #000;
@@ -198,7 +198,6 @@ nav {}
 }
 
 .traffic-col>.col-md-6 {
-    margin: 0;
     justify-content: center;
     align-items: center;
 }
@@ -224,7 +223,7 @@ nav {}
 .welcome {
     margin: 0;
     margin-top: -1px;
-    padding: 50px;
+    padding: 50px 0;
     background-color: #e5f5ff;
 }
 
@@ -253,7 +252,7 @@ nav {}
 
 .festival {
     margin-top: -1px;
-    padding: 50px;
+    padding: 50px 0;
     background-image: linear-gradient(#fef8dd, #fff);
     display: flex;
     flex-direction: column;
