--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Labrada:ital,wght@0,300;0,400;0,500;0,700;1,300;1,700&family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,700&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,700&family=Texturina:ital,wght@0,300;0,400;0,600;0,700;1,300&display=swap');
 
 h2 {
-    padding: 0 50px;
+    padding: 0 10%;
     margin: 0;
     text-align: center;
     font-size: 32px;
@@ -137,7 +137,7 @@ nav {}
 /* Traffic CSS */
 .traffic {
     background-image: linear-gradient(#c6b0e7 50%, #e5f5ff 50%);
-    padding: 20px 100px;
+    padding: 20px 10%;
     margin: 0;
     margin-top: -1px;
     width: 100%;
