--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ nav {}
 
 .traffic-container {
     background-color: #fff;
-    padding: 50px 50px;
+    padding: 50px 10%;
     align-items: center;
     justify-content: center;
     border-radius: 50px;
