--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,17 @@ h2 {
     font-weight: bold;
 }
 
-nav {}
+nav {
+    position: fixed !important;
+    top: 0;
+    width: 100%;
+    background-color: #fff;
+    z-index: 100;
+}
+
+.navbar .navbar-brand {
+    font-family: 'Texturina', serif;
+}
 
 .navbar-collapse {
     display: flex;
@@ -23,13 +33,14 @@ nav {}
 }
 
 .navbar-collapse>.navbar-nav {
-    width: 250px;
     text-align: right;
 }
 
 .navbar-nav .nav-item {
-    padding: 0 20px;
     font-size: 20px;
+    text-transform: capitalize;
+    font-weight: bold;
+    margin-right: 10px;
 }
 
 .nav-item:hover>a {
@@ -47,12 +58,17 @@ nav {}
         top: 60px;
         border-radius: 5px;
         border: solid 2px rgb(0, 0, 0);
-        background-color: rgb(211, 211, 211);
+        background-color: #fff;
     }
 
     .navbar-nav .nav-item {
         padding: 0 10px;
     }
+}
+
+
+@media screen and (max-width: 1024px) {
+    .navbar-nav .nav-item {}
 }
 
 
