--- a/css/style.css
+++ b/css/style.css
@@ -396,12 +396,13 @@ nav {
 }
 
 .news-content>.illustration {
-    padding: 20px;
-    border-radius: 50px;
+    border-radius: 10px;
     grid-area: illustration;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border: solid 4px #fff;
+    box-shadow: 2px 2px 0 2px #000;
 }
 
 h6.news-title {
