--- a/css/card.css
+++ b/css/card.css
@@ -9,7 +9,7 @@
 
 .slide-show {
     font-family: 'Poppins', sans-serif;
-    min-height: 100vh;
+/*     min-height: 100vh; */
     display: flex;
     align-items: center;
     justify-content: center;
