--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,7 @@ nav {
 
 /* News CSS */
 .news {
+    margin: 0;
     align-items: center;
     justify-content: space-around;
 }
@@ -342,7 +343,7 @@ nav {
 .news-item {
     text-decoration: unset;
     margin: 20px 0;
-    max-width: 400px;
+    max-width: 550px;
     min-width: 350px;
 }
 
