--- a/css/style.css
+++ b/css/style.css
@@ -342,8 +342,8 @@ nav {
 
 .news-item {
     text-decoration: unset;
-    margin: 20px 0;
-    max-width: 550px;
+    margin: 20px;
+    max-width: 650px;
     min-width: 350px;
 }
 
